fix(swap): Fixed alignment when started

--- a/src/popup/hive/pages/app-container/home/swaps/token-swaps-history/token-swaps-history-item/token-swaps-history-item.component.scss
+++ b/src/popup/hive/pages/app-container/home/swaps/token-swaps-history/token-swaps-history-item/token-swaps-history-item.component.scss
@@ -51,9 +51,8 @@
         }
         &.token-to {
           flex: 3;
-        }
-        .approximate {
-          vertical-align: -30%;
+          display: flex;
+          column-gap: 4px;
         }
       }
 
